Enterprise-RAG-V18/k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-allow
  namespace: rag-system
spec:
  podSelector:
    matchLabels:
      app: rag-api
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
    ports:
    - protocol: TCP
      port: 8000
  egress:
  - ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 5432
    - protocol: TCP
      port: 6333
    - protocol: TCP
      port: 6379
    - protocol: TCP
      port: 443
